# auth

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yaml  go.work.sum
.github/workflows/: docker.yml  test.yml
api/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
api/app/: app.go
api/app/access/: access.go
api/app/config/: config.go
api/app/controller/: app.go  application.go  controller.go  current_user.go  current_user_email.go  current_user_phone_number.go  current_user_totp.go  mfa.go  passkey.go  password-reset.go  permission.go  registration.go  tenent.go  token.go  user.go  user_email.go  user_phone_number.go  well_known.go
api/app/jwt/: jwt.go
api/app/middleware/: admin.go  authorized.go  mfa_authorized.go  middleware.go  tenent.go
api/app/model/: app.go  application.go  application_config.go  error.go  mfa.go  model.go  password-reset.go  permission.go  register.go  service_account.go  tenent.go  token.go  user.go  user_info.go  well_known.go
api/app/repository/: application.go  application_config.go  config.go  db.go  email.go  mfa.go  passkey.go  permissions.go  phone_number.go  resources.go  roles.go  (+6 more)
api/docs/: docs.go  swagger.json  swagger.yaml
docs/: SPEC.md
integration/: go.mod  go.sum  signin_test.go  test.go
migrations/: 20230702234200_core.down.sql  20230702234200_core.up.sql
ui/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: app.html  app.postcss
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/static/: manifest.json
(+125 files in other folders)
